# orderbook_aggregator

./: .gitignore  Cargo.toml  README.md  build.rs  config.yml
examples/: mock_grpc_server.rs
proto/: orderbook_summary.proto
src/: aggregator.rs  config.rs  grpc_server.rs  lib.rs  messages.rs  orderbook.rs  proto.rs  utils.rs
src/examples/: binance_ws.rs  bitstamp_ws.rs  mock_grpc_server.rs  smoke_test.rs  template_ws.rs
src/websocket/: binance.rs  bitstamp.rs  mod.rs
