[package]
name = "orderbook_aggregator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "service"
path = "src/bin/service.rs"

[[example]]
name = "mock_grpc_server"
path = "examples/mock_grpc_server.rs"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
futures = "0.3.26"
futures-util = "0.3.26"
prost = "0.11.6"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
rust_decimal = { version = "1.28.1" }
rust_decimal_macros = "1.28.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.93"
serde_yaml = "0.9"
thiserror = "1.0.38"
tokio = {version = "1.25.0", features = ["full"]}
tokio-stream = "0.1.11"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tonic = "0.8.3"
tungstenite = "0.18.0"
url = "2.3.1"

[build-dependencies]
tonic-build = "0.8"
